Fix vertical scroll on Safari

--- a/src/assets/style/base/_base.scss
+++ b/src/assets/style/base/_base.scss
@@ -26,5 +26,5 @@ h6 {
 }
 
 body[disable-scroll-y] {
-    overflow-y: hidden;
+    overflow: hidden;
 }
